# depthai-df

./: CMakeLists.txt  setup.bash
include/: gui.hpp
mono/: CMakeLists.txt
mono/include/: monocam.hpp
mono/src/: monocam.cc
src/: gui.cpp
src/depthai_command_recorder/: main.cpp
